#+title: Number Theory with Clojure ChangeLog
#+author: Valery Kocubinsky
#+language: en

* Version 0.7.0

- basic namespace
  - add check-not-divides function
  - add check-at-least-one-non-zero
  - rename check -> check-predicate
  - remove check-not
  - add check-true function
  - gcd arguments require at least one non zero integer
  - lcm arguments require non zero integers

* Version 0.6.0

- basic namespace
  - check-relatively-prime
  - product  
- primitive roots
  - reduced residues
  - find primitive root
  - find all primitive roots
  - check for primitive root

* Version 0.5.0

- Update arithmetical functions documentation
- Pointwise addition and multiplication
- Add congruence documentation
- use \varphi instead of \phi
- user \varepsilon instead of \epsilon
- use fancyvrb latex package for source block        
- rename ar-func -> arithmetical-functions
- rename congruence -> congruences
- rename quadratic-residue -> quadratic-residues  

* Version 0.4.0 <2024-03-26 Tue>

- Switch from pandoc to Org Mode export
- Split ntheory.clj into namespaces
- Add basic/lcm function
- Add modulo arithmetic
  - m*
  - m+
  - m**
- Add primes/order function
- Add primes/composite? function
- Add primes/prime? function
- Add basic/divides? function  
- Add congruence namespace
  - linear congruence
  - system of remainders
  - chinese remainder theorem
- Remove validation.clj

* Version 0.3.0 <2024-03-11 Mon>

- Factorize into different format
  - ordered sequence of primes
  - ordered sequence of primes partitioned by a prime
  - sequence of prime, power of prime  
  - map 
- Use most appropriate factorization format when implement
  arithmetic functions
- Update documentation

* Version 0.2.0 <2024-02-22 Thu>

- Switch to lein
- Switch from Sieve of Eratosthenes to least prime divisor table
- Add more arithmetical functions
- Add ChangeLog.org

* Version 0.1.0 <2024-02-10 Sat>

- Sieve of Eratosthenes
- Integer factorization which use Sieve of Eratosthenes 